// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#parse parses conditionals 1`] = `
Object {
  "general": Object {
    "fields": Object {
      "foo": Object {
        "context": null,
        "key": "foo",
        "params": Object {},
        "path": "foo",
        "remainder": "",
      },
    },
    "keyword": undefined,
    "name": "general",
    "params": Object {},
  },
}
`;

exports[`#parse parses conditionals 2`] = `
Object {
  "general": Object {
    "fields": Object {
      "foo": Object {
        "context": null,
        "key": "foo",
        "params": Object {},
        "path": "foo",
        "remainder": "",
      },
    },
    "keyword": undefined,
    "name": "general",
    "params": Object {},
  },
}
`;

exports[`#parse parses order by clause 1`] = `
Object {
  "general": Object {
    "fields": Object {},
    "keyword": undefined,
    "name": "general",
    "params": Object {},
  },
  "section offices order=city,-name": Object {
    "fields": Object {},
    "keyword": "section",
    "name": "offices",
    "params": Object {
      "order": "city,-name",
    },
  },
}
`;

exports[`#parse parses parameters with escaped quotes 1`] = `
Object {
  "general": Object {
    "fields": Object {
      "test placeholder=\\"Testing \\\\\\"quotes\\\\\\" in the middle.\\"": Object {
        "context": null,
        "key": "test",
        "params": Object {
          "placeholder": "Testing \\"quotes\\" in the middle.",
        },
        "path": "test",
        "remainder": "placeholder=\\"Testing \\\\\\"quotes\\\\\\" in the middle.\\"",
      },
    },
    "keyword": undefined,
    "name": "general",
    "params": Object {},
  },
}
`;

exports[`#parse parses parameters with escaped quotes 2`] = `
Object {
  "general": Object {
    "fields": Object {
      "test placeholder=\\"If this'll work\\"": Object {
        "context": null,
        "key": "test",
        "params": Object {
          "placeholder": "If this'll work",
        },
        "path": "test",
        "remainder": "placeholder=\\"If this'll work\\"",
      },
    },
    "keyword": undefined,
    "name": "general",
    "params": Object {},
  },
}
`;

exports[`#parse puts fields into separate branches 1`] = `
Object {
  "general": Object {
    "fields": Object {
      "name": Object {
        "context": null,
        "key": "name",
        "params": Object {},
        "path": "name",
        "remainder": "",
      },
    },
    "keyword": undefined,
    "name": "general",
    "params": Object {},
  },
  "section about": Object {
    "fields": Object {
      "bio": Object {
        "context": null,
        "key": "bio",
        "params": Object {},
        "path": "bio",
        "remainder": "",
      },
      "name": Object {
        "context": null,
        "key": "name",
        "params": Object {},
        "path": "name",
        "remainder": "",
      },
    },
    "keyword": "section",
    "name": "about",
    "params": Object {},
  },
}
`;

exports[`#render replaces general references in sections with content 1`] = `
"      Hello General
      Hello Section
    "
`;

exports[`#render replaces tags with content 1`] = `"Hello, World."`;

exports[`.fromFile reads partials from disk 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <title></title>
</head>
<body>
  Hello, .

  I'm a partial. 
  I'm a subdirectory partial. 
</body>
</html>"
`;
